tests/expected_invalid_construct_private_field.diag.out
<input>:10:9: error: cannot construct here: field 'y' is private
            outer::Resource { x: 1, y: 2 }
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
